--- a/portafolio/public/index.html
+++ b/portafolio/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -9,10 +10,12 @@
       content="Web site created using create-react-app"
     />
     <!-- google fonts -->
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
     <title>Andres' portfolio</title>
   </head>
   <body>
